Don’t push the app to GitHub pages anymore
This also adds some useful redirects to the Google Play Store and
relevant GitHub urls such as the list of releases and commit history.
The direct download link is now at /direct

--- a/app/assets/html/releases.html
+++ b/app/assets/html/releases.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="Refresh" content="0; url=/field-app.apk" />
+    <meta http-equiv="Refresh" content="0; url=https://github.com/truefootprint/field-app/releases" />
     <title>Field App</title>
   </head>
   <body>
